# ccpp-nuopc

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindESMF.cmake
src/: ccpp_driver_mod.F90  ccpp_inline_cdeps_mod.F90  ccpp_internal_state.F90  ccpp_nuopc_cap.F90  sample_scheme.F90  test_ccpp_driver.F90
